--- a/application/index/view/message/message.html
+++ b/application/index/view/message/message.html
@@ -23,7 +23,7 @@
 			<div class="oneBox_body_list message_body_list">
 				<div class="yd">·</div>
 					<div class="oneBox_body_list_bd">
-						<a href="/Websitewap/websitewap?pid={$v.pid}&paid={$v.id}" target="_blank">{$v.title}</a>
+						<a href="/d/{$v.pid}/{$v.id}.shtml" target="_blank">{$v.title}</a>
 					</div>
 				<div class="div_time">{$v.ctime|date="Y-m-d",###}</div>
 			</div>
