--- a/application/index/view/websitewap/websitewap.html
+++ b/application/index/view/websitewap/websitewap.html
@@ -8,7 +8,7 @@
 		<ol class="breadcrumb">
 		  <li><a href="/">首页</a></li>
 		  {if condition="($pid)"}
-		  <li><a href="/Message/message?pid={$pid}">{$data.programaCname}</a></li>
+		  <li><a href="/zs/{$pid}.shtml">{$data.programaCname}</a></li>
 		  <li class="active">{$data.programa_articleTitle}</li>
 		  {/if}
 		</ol>
