--- a/application/wap/view/layouts/header.html
+++ b/application/wap/view/layouts/header.html
@@ -45,7 +45,7 @@
       <ul class="expand-list">
         {if $data.programaData}
           {foreach name="data.programaData" item="v" key="k"}
-            <li><a href="/wap/Message/message?pid={$v.id}">{$v.cname}</a></li>
+            <li><a href="/wap/zs/{$v.id}.shtml">{$v.cname}</a></li>
           {/foreach}
         {/if}
       </ul>
