--- a/application/index/view/layouts/header.html
+++ b/application/index/view/layouts/header.html
@@ -36,7 +36,7 @@
                 <a href="/Base/sitemap" target="_blank" >网站地图</a>
             </div>
             <div class="top-list textR">
-                <a href="/admin" title="院校登录" target="_blank">院校登录</a>
+                <a href="/admin" title="院校登录" target="_blank" style="color: #f00;">院校登录</a>
                 <a href="#" id="favorites" title="#">加入收藏</a>
             </div>
         </div>
