--- a/public/static/wap/index/css/index.css
+++ b/public/static/wap/index/css/index.css
@@ -9,3 +9,4 @@
 .weui-media-box__desc{line-height: 1.6;}
 .whiteSpace{white-space: normal;line-height: 1.6;}
 .btn_submit{font-size: 14px;background-color: #fff;border:0;}
+p,h4{margin:0;}
