--- a/application/index/view/layouts/footer.html
+++ b/application/index/view/layouts/footer.html
@@ -15,7 +15,7 @@
                     <div class="main_footer_bottom last_span">
                        <p> 
                         {foreach name="data.blogrollData" item="v" key="k"}
-                        <a href="{$v.cname_link}" target="_blank">{$v.cname}</a> <span>-</span>
+                        <a href="{$v.cname_link}" target="_blank">{$v.cname}</a>
                         {/foreach}
                         </p>
                     </div>
@@ -26,7 +26,6 @@
     <!-- 底部链接  -->
     <div class="row">
         <div  style="border: 0.5px solid #e5e5e5;"></div>
-        <div class="h20"></div>
         <!-- 底部链接 -->
         {if $data.webstatData}
             <p>{$data.webstatData.content}</p>
