--- a/public/static/index/layouts/css/layouts.css
+++ b/public/static/index/layouts/css/layouts.css
@@ -71,9 +71,10 @@ img{width: 100%;height: 100%;}
 .footer_link_hd{background: url(/static/images/icon.png)no-repeat;width:150px; height: 45px;}
 .footer_link_hd_span{ border-left: 2px solid #fff;font-size: 20px;font-weight: 600;padding-left:15px;line-height: 45px;
 		margin-left: 15px;color: #fff;}
-.main_footer_bottom{padding-top: 20px;padding-left: 20px;font-size: 15px;}
-.main_footer_bottom p a{padding: 15px 10px;}
-.footer_link p a{;line-height: 25px;font-size: 14px;}
+.main_footer_bottom{padding-top: 20px;padding-left: 5px;font-size: 15px;}
+.main_footer_bottom p{line-height: 1.8;}
+.main_footer_bottom p a{padding:10px;color: #888;}
+.footer_link p a{line-height: 25px;font-size: 14px;}
 
 		/***************尾部样式  start  *********************/
 
