--- a/public/static/wap/layouts/css/layouts.css
+++ b/public/static/wap/layouts/css/layouts.css
@@ -34,4 +34,4 @@ img{width: 100%;height: 100%;}
 	border-right: 1px solid #fff;width: 33.333%;padding: 0;}
 .sub_footer a.weui-tabbar__item:nth-child(3){border-right: 0;}
 .h20{width: 100%;height: 2rem;clear: both;font-size: 0;display: block;}
-.weui-footer{padding-top: 1rem;}
+.weui-footer{padding-top: 1rem;border-top: 0.5px solid #ddd;}
