--- a/application/admin/view/blogroll/add.html
+++ b/application/admin/view/blogroll/add.html
@@ -13,11 +13,11 @@
         <h3 class="panel-title">@ 添加</h3>
       </div>
       <div class="panel-body">
-        <form class="form-horizontal" id="bannerForm" action="/admin/{$ctl}/add?id={$id}" method="post">
+        <form class="form-horizontal" id="bannerForm" action="/admin/{$ctl}/add?id={$id}&type={$type}" method="post">
           <div class="form-group">
             <label class="col-sm-2 control-label">名称</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" name="cname" placeholder="请输入友情链接名称" {if condition="($data)"}value="{$data.cname}"{/if}>
+              <input type="text" class="form-control" name="cname" placeholder="请输入名称" {if condition="($data)"}value="{$data.cname}"{/if}>
             </div>
           </div>
           <div class="form-group">
