--- a/application/admin/view/programa/add.html
+++ b/application/admin/view/programa/add.html
@@ -5,7 +5,7 @@
 <!-- Page -->
 <div class="page animsition">
   <div class="page-header">
-    <h1 class="page-title"># 栏目管理</h1>
+    <h1 class="page-title"># 内容管理</h1>
   </div>
   <div class="page-content">
     <div class="panel">
