--- a/application/admin/view/layouts/footer.html
+++ b/application/admin/view/layouts/footer.html
@@ -1,9 +1,9 @@
   <!-- Footer -->
-  <footer class="site-footer">
+  <!-- <footer class="site-footer">
     <div class="site-footer-right">
       <i class="red-600 wb wb-heart"></i> <a href="http://getcunji.com" target="_blank">重庆存己科技</a>
     </div>
-  </footer>
+  </footer> -->
   <!-- Core  -->
   <script src="/static/assets/vendor/jquery/jquery.js"></script>
   <script src="/static/assets/vendor/bootstrap/bootstrap.js"></script>
