--- a/public/static/wap/layouts/css/layouts.css
+++ b/public/static/wap/layouts/css/layouts.css
@@ -28,6 +28,10 @@ img{width: 100%;height: 100%;}
 @media(max-width: 348px){
 .expand-list li{padding:.25rem 0;}
 }
+.weui-flex__item {
+	font-family: "SimHei","	Microsoft YaHei",Serif;
+	font-weight: bold;
+}
 
 .sub_footer{position: fixed;width: 100%;height: 2rem;line-height: 2rem;left: 0;bottom: 0;background-color: #333;}
 .sub_footer a.weui-tabbar__item{float: left;height: 2rem;color: #fff;font-size: 16px;
